--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,25 +1,100 @@
-.banner {
-  background-size: cover;
-  background-position: center;
-  padding: 150px 0;
-  height: 600px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+*
+{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+body {
+  background: #111;
 }
 
-.boats-preview {
+
+.banner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  padding: 0 100px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
   background-size: cover;
-  background-position: center;
-  height: 180px;
+}
+.banner:before {
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 400px;
+  height: 100%;
+  background: rgba(0,0,0,0.4);
+}
+
+.banner iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  object-fit: fill;
+  pointer-events: none;
+}
+
+
+.banner .textBox {
+  position: relative;
+  max-width: 550px;
+  z-index: 2;
+  margin-left: 50px;
+  font-weight: 100;
+  opacity: 1.0;
+}
+.banner .textBox h2 {
+  color: #fff;
+  font-size: 3em;
+}
+.banner .textBox p {
+  color: #fff;
+  font-size: 1.1em;
+  margin: 5px 0 25px;
+}
+.search-bar-bar {
+  position: absolute;
+  display: inline-block;
+  opacity: 1;
+ 
+}
+
+.banner .videoBx {
+  position: relative;
+  background: #fff;
+  width: 508px;
+  height: 286px;
+  z-index: 1;
+  margin-left: 50px;
+}
+.banner .videoBx iframe {
+  opacity: 1;
+}
+.banner .sci {
+  position: absolute;
+  bottom: 20px;
+  letter-spacing: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: white;
-  color:lightgrey;
-  font-size: 24px;
-  font-weight: bold;
 }
-
-.boats-preview {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 16px;
+.banner .sci li {
+  list-style: none;
+}
+.banner .sci li a {
+  display: inline-block;
+  margin-right: 15px;
+}
+.banner .sci li a i {
+  transform: scale(0.5);
+  filter: invert(1);
 }
