--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,31 @@
+<body>
+  <div class="banner">
+    <div class="textBox" id="text-boxic">
+      <h2 id="sised">Awesome Boats for You</h2>
+      <p id="sised2">Fantastic way to rent a boat to begin unforgettable sea journey. Let sail across the world's seas!</p>
+      <div class="search-bar-bar form-inline">
+        <%= form_tag boats_path, method: :get do %>
+          <%= text_field_tag :address,
+            params[:address],
+            class: "form-control",
+            placeholder: "Where are you going?"
+          %>
+          <%= submit_tag "Search", class: "btn btn-primary ml-4" %>
+        <% end %>
+      </div>
+    </div>
+      <div class="videoBx">
+        <iframe src="https://www.youtube.com/embed/C3WEsZXHFYk?autoplay=1&showinfo=0&controls=0&mute=1&iv_load_policy=3&modestbranding=1&nologo=1&enablejsapi=1?controls=0&amp;start=15" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" loop allowfullscreen></iframe>
+      </div>
+    <iframe src="https://www.youtube.com/embed/C3WEsZXHFYk?autoplay=1&showinfo=0&controls=0&mute=1&iv_load_policy=3&modestbranding=1&nologo=1&enablejsapi=1?controls=0&amp;start=15" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" loop allowfullscreen></iframe>
+  </div>
+</body>
+
+<!-- <%= simple_form_for :search, html: {class: ' form-inline'}, url: boats_path, method: "GET" do |f| %>
+        <%= f.input :address, label: false, placeholder: "Where are you going?", class: "input-medium search-query" %>
+        <%= f.submit "Search", class: "btn btn-primary ml-4"%>
+
+
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1491316713428-0cbd516756a3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
   <div class="d-flex justify-content-center">
     <div class="search-bar"></div>
@@ -18,10 +46,5 @@
     <h1></h1>
   </div>
 </div>
-
-
-<!-- <%= simple_form_for :search, html: {class: ' form-inline'}, url: boats_path, method: "GET" do |f| %>
-        <%= f.input :address, label: false, placeholder: "Where are you going?", class: "input-medium search-query" %>
-        <%= f.submit "Search", class: "btn btn-primary ml-4"%>
       <% end %> -->
   
